[gd_scene load_steps=8 format=3 uid="uid://ccxc2n2lohycb"]

[ext_resource type="Texture2D" uid="uid://b6irhpunowl8a" path="res://Topdown Assets/Sprites/Extras/bullet.png" id="1_8vic8"]
[ext_resource type="Script" uid="uid://b8u56y5onkrk" path="res://scenes/bullet/single_bullet.gd" id="1_vq1w5"]
[ext_resource type="Texture2D" uid="uid://b0d6xe0sreis5" path="res://Topdown Assets/Sprites/Shadow.png" id="3_ju4sd"]
[ext_resource type="AudioStream" uid="uid://d2usimra7pxry" path="res://Topdown Assets/Sound/Explosion.wav" id="4_ju4sd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2y8uk"]
radius = 536.238

[sub_resource type="Gradient" id="Gradient_ju4sd"]
offsets = PackedFloat32Array(0, 0.771739)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1ca1x"]
gradient = SubResource("Gradient_ju4sd")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="SingleBullet" type="Node2D"]
script = ExtResource("1_vq1w5")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.07, 0.07)
collision_layer = 0
collision_mask = 5

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture = ExtResource("1_8vic8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_2y8uk")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 146)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_ju4sd")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ju4sd")
volume_db = -10.0
bus = &"SFX"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1, 0)
color = Color(0.859971, 0.604033, 0.0288203, 1)
energy = 0.5
texture = SubResource("GradientTexture2D_1ca1x")
texture_scale = 5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
